force-app/main/default/objects/gatherica_event_Users__c/gatherica_event_Users__c.object-meta.xml
<CustomObject>
    <label>gatherica event Users</label>
    <nameField>
        <displayFormat>GE USER - {00000}</displayFormat>
        <label>gatherica event Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gatherica event Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>