force-app/main/default/objects/gatherica_event_Users__c/fields/Gatherica_Event__c.field-meta.xml
<CustomField>
    <fullName>Gatherica_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gatherica Event</label>
    <referenceTo>Gatherica_Event__c</referenceTo>
    <relationshipLabel>gatherica event Users</relationshipLabel>
    <relationshipName>gatherica_event_Users</relationshipName>
    <type>Lookup</type>
</CustomField>