force-app/main/default/objects/gatherica_event_Users__c/fields/gatherica_User__c.field-meta.xml
<CustomField>
    <fullName>gatherica_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>gatherica User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>gatherica event Users</relationshipLabel>
    <relationshipName>gatherica_event_Users</relationshipName>
    <type>Lookup</type>
</CustomField>