force-app/main/default/objects/gatherica_event_Users__c/fields/Is_User_Happy__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Happy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Happy</label>
    <type>Checkbox</type>
</CustomField>